--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
